# MermaidForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FIRST_PUSH.md  GITHUB_GUIDE.md  LICENSE  QUICKSTART.md  README.md  START_HERE.md  create_icons.py  index.html  package-lock.json  package.json  portable.flag  setup-dev.ps1  vite.config.ts
TestMermaid/: diagram1.mmd  diagram2.mmd
releases/linux/: MermaidForge-1.0.0-1.x86_64.rpm  MermaidForge_1.0.0_amd64.deb
releases/windows/: MermaidForge_1.0.0_x64_en-US.msi
src/: App.css  App.tsx  App.tsx.backup  index.css
src-tauri/: Cargo.toml  Cargo.toml.backup  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  main.rs.backup
