[package]
name = "mermaidforge"
version = "1.0.0"
description = "Convertisseur Mermaid professionnel standalone"
authors = ["Driss NAAMANE <drissman@gmail.com>"]
license = "MIT"
repository = "https://github.com/drissman/MermaidForge"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
